--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "cross-env mode=dev webpack server --mode=development --progress --color",
-    "build": "cross-env mode=production npm run lint && webpack --mode=production --progress --color",
-    "lint": "eslint --fix --ext .ts,.js,.vue src",
+    "dev": "cross-env mode=dev webpack server --mode=development --progress --color --config build/webpack.dev.config.js",
+    "build": "cross-env mode=production npm run lint && webpack --mode=production --progress --color --config build/webpack.prod.config.js",
+    "lint": "eslint --ext ts,tsx,js,jsx,vue src && vue-tsc --noEmit && npm run stylelint",
     "prepare": "husky install",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "tsc": "vue-tsc --noEmit",
+    "stylelint": "stylelint \"**/*.{vue,css,scss}\" --fix"
   },
   "dependencies": {
     "core-js": "^3.31.0",
@@ -38,19 +40,28 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss-html": "^1.5.0",
     "postcss-loader": "^7.3.3",
     "postcss-px-to-viewport": "^1.1.1",
     "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "stylelint": "^15.8.0",
+    "stylelint-config-recommended-scss": "^12.0.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-order": "^6.0.3",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
     "vue-loader": "^17.0.1",
+    "vue-style-loader": "^4.1.3",
     "vue-tsc": "^1.4.2",
     "webpack": "^5.87.0",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0"
   },
   "lint-staged": {
     "*.{vue,js,ts,jsx,tsx}": [
